--- a/backend/src/utils/email/templates/register.html
+++ b/backend/src/utils/email/templates/register.html
@@ -254,7 +254,7 @@
                                 <tr>
                                   <td data-text="Team Text" data-font="Primary" align="left" valign="middle"
                                     style="font-family:'Poppins', sans-serif;color:#595959;font-size:16px;line-height:26px;font-weight:400;letter-spacing:0px;">
-                                    Viracun Team </td>
+                                    AsiaEDU Team </td>
                                 </tr>
                                 <tr>
                                   <td data-resizable-height="" style="font-size: 30px; height: 30px; line-height: 30px;"
