--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,9 @@
 *{
   outline: none !important;
 }
+.description .t-textarea__inner:focus{
+  box-shadow: none !important;
+}
 textarea:focus, input:focus{
   outline: none;
 }
